force-app/main/default/objects/LLC_BI__Risk_Grade_Factor__c/LLC_BI__Risk_Grade_Factor__c.object-meta.xml
<CustomObject>
    <label>Risk Grade Factor</label>
    <nameField>
        <label>Risk Grade Factor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Grade Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>