force-app/main/default/objects/LLC_BI__Risk_Grade_Factor__c/fields/LLC_BI__Column_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Column_Number__c</fullName>
    <description>This field is optional. It is populated manually by the user. This field controls the sort order for risk grade factors in the risk grade group.</description>
    <label>Row_Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>