force-app/main/default/objects/LLC_BI__Risk_Grade_Factor__c/fields/LLC_BI__Is_Quantitative__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Quantitative__c</fullName>
    <description>This field is hidden and it is a formula based on the value of the Type field. When the type is set to Quantitative, the value automatically evaluates to 1.</description>
    <formula>IF( ISPICKVAL(LLC_BI__Type__c, &apos;Quantitative&apos;) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Quantitative</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>