force-app/main/default/objects/LLC_BI__Risk_Grade_Factor__c/fields/LLC_BI__Risk_Grade_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Risk_Grade_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required. It is only populated automatically if the user is creating the risk grade factor from the risk grade template.  This field specifies the risk grade template associated with the risk grade factor.</description>
    <label>Risk Grade Template</label>
    <referenceTo>LLC_BI__Risk_Grade_Template__c</referenceTo>
    <relationshipLabel>Risk Grade Factors</relationshipLabel>
    <relationshipName>Risk_Grade_Factors</relationshipName>
    <type>Lookup</type>
</CustomField>