force-app/main/default/objects/LLC_BI__Risk_Grade_Factor__c/fields/LLC_BI__Units__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Units__c</fullName>
    <description>This field is optional. It is populated manually by the user. For qualitative risk grade factors, this field is used to display a symbol in parenthesis on the row.</description>
    <inlineHelpText>The units of the risk grade factor. The symbol entered here will be displayed in parenthesis on the column.</inlineHelpText>
    <label>Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>