force-app/main/default/objects/LLC_BI__Risk_Grade_Factor__c/fields/LLC_BI__Weight__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Weight__c</fullName>
    <description>This field is required. It must be manually populated with a percentage number lower than 1 (ex: .25). It is used to determine how much a particular risk grade factor contributes to a risk grade group (if the factor is associated to a group) or the calculated risk grade (if it does not). The weight across all risk grade factors for a group (if associated) or a risk grade template (if no group) should not exceed 1.</description>
    <label>Weight</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>